# toktok-stack

./: .bazel_fix_commands.json  .bazelignore  .bazelrc  .bazelrc.local.example  .cirrus.yml  .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  .hadolint.yaml  .hie-bios  .local.example.bazelrc  .restyled.yaml  .stylish-haskell.yaml  .travis.script  .travis.yml  .typo-ci.yml  .ycm_extra_conf.py  BUILD  BUILD.bazel  Dockerfile  LICENSE  MODULE.bazel  Makefile  README.md  WORKSPACE  appveyor.yml  brittany.yaml  checksums.txt  compose.yml  cspell.config.yaml  ghc.nix  go.work  heroku.yml  hie.yaml  mypy.ini  pyrightconfig.json  stack.yaml
.circleci/: config.yml
.github/: dependabot.yml  settings.yml
.github/workflows/: ci.yml  codeql.yml  docker.yml  kythe.yml
hs-toxxi/: .cirrus.yml  .gitignore  BUILD.bazel  README.md  stack.yaml  toxxi.cabal
hs-toxxi/.github/: settings.yml
hs-toxxi/.github/docker/: Dockerfile
hs-toxxi/src/Network/Tox/: Tui.hs
hs-toxxi/test/Network/Tox/: TuiSpec.hs
hs-toxxi/tools/: BUILD.bazel  toxxi.hs
tools/: BUILD  BUILD.bazel  Dockerfile  bazel-0.11.0-without-jdk-installer-linux-x86_64.sh.sha256  bazel-0.15.0-installer-linux-x86_64.sh.sha256  bazel-0.16.0-installer-linux-x86_64.sh.sha256  bazel-0.16.1-installer-linux-x86_64.sh.sha256  bazel-0.17.1-installer-linux-x86_64.sh.sha256  bazel-0.22.0-installer-linux-x86_64.sh.sha256  bazel-0.9.0-without-jdk-installer-linux-x86_64.sh.sha256  bazel-2.2.0-installer-linux-x86_64.sh.sha256  bazel-3.0.0-installer-linux-x86_64.sh.sha256  bazel-3.1.0-installer-linux-x86_64.sh.sha256  bazel-4.2.1-installer-linux-x86_64.sh.sha256  bazel.rc  bazel_0.9.0-linux-x86_64.deb.sha256  bazelrc.boot  bazelrc.docker  bazelrc.linux  cov-upload  fix_vscode  foreach-repo  git-remotes  git-sync  git_modules_test.pl  gitmodules  inject-repo  license_test.sh  no_undefined.bzl  prepare_android_sdk.sh  prepare_third_party.sh  prepare_toolchain.sh  project.bzl  qt.bzl  retry  run-fuzzers  setup-bazel  setup-cache  setup-ci  sudoers  (+2 more)
tools/bazelrc/: README.md  freebsd-clang  freebsd-gcc  linux-clang  linux-gcc
tools/bazelrc/config/: clang  common  freebsd  gcc  linux
tools/built/: Dockerfile  Makefile  bazel_test  build-all.sh  init.sh  run_dev_container.sh
tools/built/built/: .gitignore
tools/built/dev/: Dockerfile  README.md  bazel-nomodules  deploy_dev_container.sh  init.sh  run_dev_container.sh  setup-local.sh  setup.sh  test_dev_container.sh
tools/built/dev/home/: .vimrc  .zshrc
tools/built/dev/home/.config/procps/: toprc
tools/built/dev/home/.ssh/: authorized_keys
tools/built/dev/home/.vim/: settings.vim
tools/built/src/: Dockerfile  Dockerfile.arm64  Dockerfile.asan  Dockerfile.debug  Dockerfile.dev  Dockerfile.dev-hs  Dockerfile.fastbuild  Dockerfile.haskell  Dockerfile.in  Dockerfile.msan  Dockerfile.release  Dockerfile.third_party  Dockerfile.tsan  Dockerfile.windows  home.nix  init.sh  setup-dev.sh  setup-local.sh
tools/built/src/home/: .gitconfig  .vimrc  .zshrc.custom  key.pem
tools/built/src/home/.config/home-manager/: home.nix
tools/checksums/: linux.sha256  update
tools/config/: BUILD.bazel
tools/debug/: BUILD.bazel  flakynet.c  malloc_debug.py  mallocfail.c  oomer.c  run_flakynet.py  run_mallocfail  run_oomer  symbolize
tools/git/: git-s  git-ss  git-stack-status  git-submit
tools/haskell/: BUILD.bazel  gen_haskell_targets  haskell_targets.bzl  hie-docker
tools/kythe/: Dockerfile  builder.py  clang_tidy  clang_tidy.py  ycm_extra_conf.py
tools/kythe/csrch/: Dockerfile
tools/project/: BUILD.bazel  build_defs.bzl  cabal_test  cabal_test.pl  cabal_test.py  diff_test.sh  haskell_cirrus.yml.in  haskell_travis.yml.in  mkstamp.sh  mkstamp_c.sh  readme_test.sh  settings_test.sh  update_versions.sh  yamllint.rc  yamllint_test.sh
tools/project/common/github/ISSUE_TEMPLATE/: release.yml.base
tools/project/common/github/workflows/: checks.yml.base  ci.yml.base  draft.base.yml  release.yml.base
tools/project/haskell/: cirrus.yml.in
tools/project/haskell/github/: Dockerfile  checks.yml  ci.yml  publish.yml
tools/workspace/: cleanup  github.bzl  junit5.bzl  local.bzl  python.bzl  qt.bzl  rules_nixpkgs.bzl
