load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_tweag_rules_haskell//haskell:haskell.bzl", "haskell_toolchain")

exports_files(srcs = ["LICENSE.md"])

# gazelle:prefix github.com/TokTok
# gazelle:exclude go-toxcore-c/tools
# gazelle:exclude jvm-toxcore-c
gazelle(
    name = "gazelle",
    command = "fix",
    prefix = "github.com/TokTok",
)

genrule(
    name = "toolchain_as",
    outs = ["as"],
    cmd = "ln -s /usr/bin/as $@",
)

genrule(
    name = "toolchain_ld",
    outs = ["ld"],
    cmd = "ln -s /usr/bin/ld $@",
)

genrule(
    name = "toolchain_touch",
    outs = ["touch"],
    cmd = "ln -s /usr/bin/touch $@",
)

genrule(
    name = "hspec_discover",
    outs = ["hspec-discover"],
    cmd = "ln -s `which hspec-discover` $@",
)

haskell_toolchain(
    name = "ghc",
    extra_binaries = [
        ":hspec_discover",
        ":toolchain_as",
        ":toolchain_ld",
        ":toolchain_touch",
    ],
    tools = "@ghc//:bin",
    version = "8.4.1",
)
