load("@bazel_gazelle//:def.bzl", "gazelle")
load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")

exports_files([".gitmodules"])

# gazelle:prefix github.com/TokTok
# gazelle:exclude go-toxcore-c/tools
# gazelle:exclude jvm-toxcore-c
gazelle(
    name = "gazelle",
    command = "fix",
    prefix = "github.com/TokTok",
)

refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = {"//...": ""},
)
