module(
    name = "toktok-stack",
    version = "0.1",
)

# https://github.com/bazelbuild/platforms/releases
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_license", version = "1.0.0")

# https://github.com/bazelbuild/bazel-central-registry/tree/main/modules/curl
bazel_dep(name = "curl", version = "8.8.0")

# https://github.com/bazelbuild/bazel-central-registry/tree/main/modules/libconfig
bazel_dep(name = "libconfig", version = "1.7.3")

# https://github.com/bazelbuild/bazel-central-registry/tree/main/modules/protobuf
bazel_dep(name = "protobuf", version = "28.3")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "4f28899228fb3ad0126897876f147ca15026151e",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)
