name:                 toxxi
version:              0.0.1
synopsis:             Text UI Tox Client
homepage:             https://toktok.github.io/
license:              GPL-3
license-file:         LICENSE
author:               Iphigenia Df <iphydf@gmail.com>
maintainer:           Iphigenia Df <iphydf@gmail.com>
copyright:            Copyright (c) 2016-2021, Iphigenia Df
category:             Data
stability:            Experimental
cabal-version:        >= 1.10
build-type:           Simple
description:
  A simple console based text client for Tox.

source-repository head
  type:             git
  location:         https://github.com/TokTok/hs-toxxi

library
  default-language: Haskell2010
  hs-source-dirs:
      src
  ghc-options:
      -Wall
  exposed-modules:
      Network.Tox.Tui
  build-depends:
      base < 5
    , brick

test-suite testsuite
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: testsuite.hs
  other-modules:
      Network.Tox.TuiSpec
  ghc-options:
      -Wall
  build-tool-depends:
      hspec-discover:hspec-discover
  build-depends:
      base < 5
    , QuickCheck
    , hspec
    , toxxi
