load("@rules_haskell//haskell:defs.bzl", "haskell_repl")
load("//tools/project:build_defs.bzl", "workspace")

workspace(projects = [
    "btox",
    "c-toxcore",
    "c-toxcore-hs",
    "ci-tools",
    "dockerfiles",
    "experimental",
    "go-toxcore-c",
    "hs-apigen",
    "hs-cimple",
    "hs-github-tools",
    "hs-msgpack-arbitrary",
    "hs-msgpack-binary",
    "hs-msgpack-persist",
    "hs-msgpack-rpc-conduit",
    "hs-msgpack-testsuite",
    "hs-msgpack-types",
    "hs-schema",
    "hs-tokstyle",
    "hs-toxcore",
    "hs-toxcore-c",
    "js-toxcore-c",
    "py_toxcore_c",
    "qtox",
    "spec",
    "tools/.github",
    "tools/toktok-fuzzer",
    "toxic",
    "toxins",
    "website",
])

haskell_repl(
    name = "hie-bios",
    collect_data = False,
    deps = [
        "//hs-cimple",
        "//hs-github-tools",
        "//hs-msgpack-arbitrary",
        "//hs-msgpack-binary",
        "//hs-msgpack-persist",
        "//hs-msgpack-rpc-conduit",
        "//hs-msgpack-testsuite",
        "//hs-msgpack-types",
        "//hs-schema",
        "//hs-tokstyle",
        "//hs-toxcore",
        "//hs-toxcore-c",
    ],
)

exports_files(srcs = [
    "LICENSE.gpl3",
    "LICENSE.hs-msgpack",
])
