load("//tools/project:build_defs.bzl", "workspace")

workspace(projects = [
    "btox",
    "c-toxcore",
    "c-toxcore-hs",
    "ci-tools",
    "dockerfiles",
    "experimental",
    "go-toxcore-c",
    "hs-apigen",
    "hs-cimple",
    "hs-github-tools",
    "hs-msgpack-arbitrary",
    "hs-msgpack-binary",
    "hs-msgpack-rpc-conduit",
    "hs-msgpack-testsuite",
    "hs-msgpack-types",
    "hs-schema",
    "hs-tokstyle",
    "hs-toxcore",
    "hs-toxcore-c",
    "js-toxcore-c",
    "py_toxcore_c",
    "qtox",
    "spec",
    "tools/.github",
    "tools/toktok-fuzzer",
    "toxic",
    "toxins",
    "website",
    "zig-toxcore-c",
])

exports_files(srcs = glob(["LICENSE.*"]))
