load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "flakynet.so",
    srcs = ["flakynet.c"],
    linkshared = True,
    visibility = ["//visibility:public"],
)

cc_library(
    name = "mallocfail",
    srcs = ["mallocfail.c"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "oomer",
    srcs = ["oomer.c"],
    visibility = ["//visibility:public"],
)
