load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "run_flakynet",
    srcs = ["run_flakynet.py"],
    data = [":flakynet.so"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "flakynet.so",
    srcs = ["flakynet.c"],
    linkopts = ["-ldl"],
    linkshared = True,
    visibility = ["//visibility:public"],
)

cc_library(
    name = "mallocfail",
    srcs = ["mallocfail.c"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "oomer",
    srcs = ["oomer.c"],
    tags = ["no-cross"],
    visibility = ["//visibility:public"],
)
