exports_files(srcs = [
    "cabal_test",
    "common/github/workflows/release.yml",
    "diff_test.sh",
    "haskell/cirrus.yml.in",
    "haskell/github/docker/Dockerfile.in",
    "haskell/github/workflows/checks.yml",
    "haskell/github/workflows/ci.yml",
    "haskell/github/workflows/publish.yml",
    "readme_test.sh",
    "settings_test.sh",
    "yamllint.rc",
    "yamllint_test.sh",
])
